# daisy

./: .gitignore  404.html  CHECKLIST.md  CMakeLists.txt  CMakePresets.json  ChangeLog  Makefile  NEWS  README.md  TODO  action_BBCH.C  action_table.C  bioincorporation.C  column_std.C  condition_BBCH.C  crop.h  depth.C  groundwater_source.C  harvest.h  harvesting.h  index.html  log.h  mkdocs.yml  output.h  program_cpedata.C  pyproject.toml  sitemap.xml  small.mermaid~  source.h  summary_Rsqr.C  summary_RsqrW.C  summary_fractiles.C  surface_source.C  timestep.h  wsource.C  wsource_base.C  wsource_combine.C  wsource_const.C  wsource_table.h
lib/: CMakeLists.txt  PFAS.dai  all.dai  chemistry-base.dai  chemistry.dai  fertilizer.dai  log-std.dai  log.dai
sample/: CMakeLists.txt  PFAS-sample.dai  test-prd.dai  test-python.dai  test_T_min.py
sample/python/: CMakeLists.txt  accumulate.dai  accumulate.py
src/daisy/: CMakeLists.txt  column.C  column_std.C  condition.C  condition_BBCH.C  condition_boolean.C  condition_crop.C  condition_daisy.C  condition_extern.C  condition_logic.C  condition_soil.C  condition_time.C  condition_walltime.C  condition_weather.C  daisy.C  daisy_time.C  field.C  timestep.C
src/daisy/chemicals/: CMakeLists.txt  adsorption.C  adsorption_Python.C  adsorption_air.C  adsorption_freundlich.C  adsorption_guo2020.C  adsorption_langmuir.C  adsorption_linear.C  adsorption_vS_S.C  awi.C  chemical.C  chemical_std.C  chemistry.C  chemistry_multi.C  chemistry_std.C  denprod.C  denprod_Parton1996.C  equil.C  equil_goal.C  equil_langmuir.C  equil_linear.C  im.C  imvec.C  nitrification.C  nitrification_soil.C  nitrification_solute.C  ponddamp.C  rainergy.C  reaction.C  reaction_Jarvis99.C  reaction_Morgan98.C  reaction_Python.C  reaction_Styczen88.C  reaction_adsorption.C  reaction_boundrel.C  reaction_colgen.C  reaction_denit.C  reaction_dom.C  reaction_equil.C  reaction_filter.C  (+6 more)
src/daisy/crop/: CMakeLists.txt  canopy_simple.C  canopy_std.C  crop.C  crop_simple.C  crop_std.C  crpn.C  cstage.C  harvesting.C  partition.C  phenology.C  phenology_TSum.C  phenology_std.C  photo.C  photo_FCC3.C  photo_FCC4.C  photo_Farquhar.C  photo_GL.C  production.C  seed.C  seed_LAI.C  seed_release.C  stomatacon.C  stomatacon_SHA.C  vernalization.C  wse.C
src/daisy/lower_boundary/: CMakeLists.txt  groundwater.C  groundwater_aquitard.C  groundwater_deep.C  groundwater_extern.C  groundwater_file.C  groundwater_fixed.C  groundwater_flux.C  groundwater_lysimeter.C  groundwater_source.C  groundwater_static.C
src/daisy/manager/: CMakeLists.txt  action.C  action_BBCH.C  action_activity.C  action_crop.C  action_extern.C  action_fertilize.C  action_harvest.C  action_irrigate.C  action_lisp.C  action_markvand.C  action_message.C  action_repeat.C  action_sow.C  action_spray.C  action_stop.C  action_surface.C  action_table.C  action_tillage.C  action_wait.C  action_while.C  action_with.C  irrigate.C
src/daisy/organic_matter/: CMakeLists.txt  am.C  aom.C  bioincorporation.C  clayom.C  clayom_biomod.C  clayom_old.C  doe.C  dom.C  domsorp.C  domsorp_std.C  om.C  organic.C  organic_none.C  organic_std.C  smb.C  som.C
src/daisy/output/: CMakeLists.txt  bdconv.C  destination.C  dlf.C  fetch.C  fetch_pretty.C  harvest.C  log.C  log_alist.C  log_all.C  log_checkpoint.C  log_extern.C  log_harvest.C  log_select.C  log_table.C  output.C  select.C  select_array.C  select_content.C  select_flow.C  select_index.C  select_number.C  select_quiver.C  select_value.C  select_volume.C  summary.C  summary_Rsqr.C  summary_RsqrW.C  summary_balance.C  summary_fractiles.C  summary_simple.C
src/daisy/soil/: CMakeLists.txt  abiotic.C  horheat.C  horizon.C  horizon_numeric.C  horizon_system.C  hydraulic.C  hydraulic_B_BaC.C  hydraulic_B_BaC_Bimodal.C  hydraulic_B_C.C  hydraulic_B_C_inverse.C  hydraulic_B_vG.C  hydraulic_Cosby.C  hydraulic_MACRO.C  hydraulic_M_BaC.C  hydraulic_M_BaC_Bimodal.C  hydraulic_M_BivG.C  hydraulic_M_C.C  hydraulic_M_vG.C  hydraulic_M_vG_compact.C  hydraulic_M_vGip.C  hydraulic_M_vGp.C  hydraulic_hypres.C  hydraulic_hyprop.C  hydraulic_linear.C  hydraulic_mod_C.C  hydraulic_old2.C  hydraulic_table.C  hydraulic_wepp.C  hydraulic_yolo.C  soil.C  soil_heat.C  soil_water.C  soilph.C  texture.C  tortuosity.C  tortuosity_M_Q.C  tortuosity_linear.C  water.C
src/object_model/: CMakeLists.txt  attribute.C  block.C  block_model.C  block_nested.C  block_submodel.C  block_top.C  check.C  check_range.C  convert.C  frame.C  frame_model.C  frame_submodel.C  function.C  function_Python.C  intrinsics.C  librarian.C  library.C  metalib.C  model.C  model_derived.C  model_framed.C  model_logable.C  oldunits.C  parser.C  parser_file.C  plf.C  printer.C  printer_file.C  rate.C  symbol.C  toplevel.C  traverse.C  traverse_delete.C  treelog.C  treelog_child.C  treelog_store.C  treelog_text.C  type.C  unit.C  (+6 more)
src/object_model/parameter_types/: CMakeLists.txt  boolean.C  boolean_number.C  boolean_string.C  integer.C  integer_arit.C  number.C  number_apply.C  number_arit.C  number_const.C  number_lisp.C  number_plf.C  number_soil.C  number_source.C  stringer.C
test/cxx-unit-tests/: CMakeLists.txt
test/cxx-unit-tests/tests/: CMakeLists.txt  ut_mathlib.C  ut_retention_exponential_model.C  ut_retention_pastis_model.C  ut_scope_exchange.C  ut_solver_cxsparse.C  ut_solver_ublas.C  ut_units.C
test/dai-system-tests/: CMakeLists.txt  generate_baseline.sh  generate_baselines_from_csv.sh  make_test_list.sh  test-list.csv
test/dai-system-tests/tests/: CMakeLists.txt  test-bioclimate-FAO56_daily.dai  test-bioclimate-SSOC.dai  test-cloudiness-Kjaersgaard.dai  test-groundwater-fixed.dai  test-litter-residue.dai  test-net_radiation-idso_jackson.dai  test-net_radiation-prata.dai  test-net_radiation-satterlund.dai  test-pet-AslyngHansen82.dai  test-pet-Makkink57.dai  test-pet-PM.dai  test-pet-deBruin87.dai  test-phenology-modify-DS.dai  test-photosynthesis-FC_C3.dai  test-ref.dai  test-stomatacon-MNA.dai  test-stomatacon-SHA12.dai  test-tertiary-biopores-2.dai  test-tertiary-biopores.dai  test-transport-convection.dai  (+7 more)
(+1663 files in other folders)
