[project]
name = "daisy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-macros-plugin>=1.3.9",
    "mkdocs-material[imaging]>=9.6.16",
    "mkdocs-panzoom-plugin>=0.3.0",
    "mkdocs-snippets>=1.3.2",
    "pymdown-extensions>=10.16.1",
]
