include(GNUInstallDirs)
install(FILES
  all.dai
  beet-old.dai
  beetroot.dai
  broccoli.dai
  brusselssprouts.dai
  celeriac.dai
  chemistry-base.dai
  chemistry.dai
  crop.dai
  crop-old.dai
  dk-crop.dai
  dk-fertilizer.dai
  dk-grass.dai
  dk-horizon.dai
  dk-maize.dai
  dk-pea.dai
  dk-rye.dai
  dk-sbarley.dai
  dk-wbarley.dai
  dk-wrape.dai
  dk-wwheat.dai
  earlypotato.dai
  earlywhitecabbage.dai
  fertilizer.dai
  fodderbeet.dai
  grass2.dai
  grass.dai
  grass-old.dai
  log.dai
  log-old.dai
  log-std.dai
  maize.dai
  Makefile
  markvand.dai
  mini.dai
  onion.dai
  onion_plantingofsets.dai
  OpenMI.dai
  pea.dai
  pea-old.dai
  potato.dai
  potato-old.dai
  rye.dai
  ryegrass.dai
  sbarley.dai
  sbarley-old.dai
  sbeet.dai
  srape.dai
  srape-old.dai
  sugarbeet.dai
  swheat.dai
  tillage.dai
  ui-Qt.dai
  vegetation.dai
  wbarley.dai
  wbarley-old.dai
  wclover.dai
  whitecabbage.dai
  wrape.dai
  wrape-old.dai
  wwheat.dai
  wwheat-old.dai
  DESTINATION ${CMAKE_INSTALL_DATADIR}/daisy/lib)
