install(FILES
  PFAS-sample.dai
  afforestation.dai
  batch.dai
  checkpoint-1988-4-1+1.dai
  cz-management.dai
  cz-sample.dai
  cz-soil.dai
  cz-valecov.dwf
  dk-foulum.dwf
  dk-jyndevad.dwf
  dk-management.dai
  dk-soil.dai
  dk-taastrup.dwf
  dk-taastrup-early.dwf
  dk-taastrup-hourly.dwf
  dk-veg-man.dai
  DrainDrying.dai
  example.gwt
  genweather.dai
  heat-properties.dai
  init-soil.dai
  irrigation.dai
  it-bologna.dwf
  it-cer.gwt
  it-management.dai
  it-sample.dai
  it-soil.dai
  log-sample.dai
  OpenMI_management.dai
  OpenMI_simple.dai
  pedo-soil.dai
  pl-jadwisin.dwf
  pl-management.dai
  pl-sample.dai
  pl-soil.dai
  README
  rootdata.ddf
  rootmatch.dai
  safir-common.dai
  safir-site.dai
  safir-weather.dwf
  sample.dai
  sample-heat.dai
  sk-bratislava.dwf
  sk-management.dai
  sk-sample.dai
  sk-soil.dai
  test-aba.dai
  test-colloids.dai
  test-cp.dai
  test.dai
  test-GP2D.dai
  test-minimize.dai
  test-organic.dai
  test-post.dai
  test-prd.dai
  test-python.dai
  test-refman.dai
  test-scn.dai
  test-spawn.dai
  test_T_min.py
  DESTINATION ${DAISY_SAMPLE_DESTINATION} COMPONENT sample)
add_subdirectory(python)
