add_subdirectory(parameter_types)
target_sources(${DAISY_CORE_NAME} PRIVATE
  attribute.C
  block.C
  block_model.C
  block_nested.C
  block_submodel.C
  block_top.C
  check.C
  check_range.C
  convert.C
  frame.C
  frame_model.C
  frame_submodel.C
  function.C
  function_Python.C
  intrinsics.C
  librarian.C
  library.C
  metalib.C
  model.C
  model_derived.C
  model_framed.C
  model_logable.C
  oldunits.C
  parser.C
  parser_file.C
  plf.C
  printer.C
  printer_file.C
  rate.C
  symbol.C
  toplevel.C
  traverse.C
  traverse_delete.C
  treelog.C
  treelog_child.C
  treelog_store.C
  treelog_text.C
  type.C
  unit.C
  unit_model.C
  units.C
  value.C
  vcheck.C
  version.C
  xref.C
)
