add_subdirectory(transport)
target_sources(${DAISY_CORE_NAME} PRIVATE
  abiotic.C
  horheat.C
  horizon.C
  horizon_numeric.C
  horizon_system.C
  hydraulic.C
  hydraulic_B_BaC.C
  hydraulic_B_BaC_Bimodal.C
  hydraulic_B_C.C
  hydraulic_B_C_inverse.C
  hydraulic_B_vG.C
  hydraulic_Cosby.C
  hydraulic_MACRO.C
  hydraulic_M_BaC.C
  hydraulic_M_BaC_Bimodal.C
  hydraulic_M_BivG.C
  hydraulic_M_C.C
  hydraulic_M_vG.C
  hydraulic_M_vG_compact.C
  hydraulic_M_vGip.C
  hydraulic_M_vGp.C
  hydraulic_hypres.C
  hydraulic_hyprop.C
  hydraulic_linear.C
  hydraulic_mod_C.C
  hydraulic_old2.C
  hydraulic_table.C
  hydraulic_wepp.C
  hydraulic_yolo.C
  soil.C
  soil_heat.C
  soil_water.C
  soilph.C
  texture.C
  tortuosity.C
  tortuosity_M_Q.C
  tortuosity_linear.C
  water.C
)
