add_subdirectory(root)
dai_system_test(crop-simple daisy/crop)
dai_system_test(phenology-modify-DS daisy/crop)
dai_system_test(photosynthesis-FC_C3 daisy/crop)
dai_system_test(photosynthesis-FC_C4 daisy/crop)
dai_system_test(stomatacon-MNA daisy/crop)
dai_system_test(stomatacon-SHA12 daisy/crop)
dai_system_test(stomatacon-SHA14 daisy/crop)
dai_system_test(vernalization-default daisy/crop)
